--- a/2. TrainSet&TestSet.ipynb
+++ b/2. TrainSet&TestSet.ipynb
@@ -7,8 +7,7 @@
       "provenance": [],
       "collapsed_sections": [
         "4xhIWBoPQh_S",
-        "K23eHFiWDO7U",
-        "QJRxlGi9NsjR"
+        "Nh2qqGkwQJlN"
       ]
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "id": "iw00-23bOe6K"
       },
       "source": [
-        "# **훈련세트와 테스트 세트**\r\n",
+        "# **<훈련세트와 테스트 세트>**\r\n",
         "\r\n",
         "### 지도 학습과 비지도 학습의 차이를 배운다. 모델을 훈련시키는 훈련 세트와 모델을 평가하기 위한 테스트 세트로 데이터를 나눠서 학습해 본다. "
       ]
@@ -34,7 +33,7 @@
         "id": "jEaFGJ8hO29r"
       },
       "source": [
-        "## 지도 학습과 비지도 학습\r\n",
+        "## **지도 학습과 비지도 학습**\r\n",
         "\r\n",
         "- 지도 학습 알고리즘은 훈련하기 위한 데이터와 정답이 필요하다. 여기서 '데이터'와 '정답'을 **input**과 **target**이라고 하며, 이 둘을 합쳐 **훈련 데이터**라고 부른다\r\n",
         "\r\n",
@@ -49,7 +48,7 @@
         "id": "4xhIWBoPQh_S"
       },
       "source": [
-        "## 훈련 세트와 데이터 세트\r\n",
+        "## **훈련 세트와 데이터 세트**\r\n",
         "\r\n",
         "- 머신러닝 알고리즘의 성능을 제대로 파악하기 위해서는 훈련 데이터와 평가에 사용할 데이터가 각각 달라야 한다.\r\n",
         "\r\n",
@@ -212,7 +211,7 @@
         "id": "K23eHFiWDO7U"
       },
       "source": [
-        "## 넘파이 \r\n",
+        "## **넘파이** \r\n",
         "- 파이썬의 대표적인 배열 라이브러리 >> 고차원의 배열을 손쉽게 만들고 조작할 수 있는 기능 제공"
       ]
     },
@@ -622,10 +621,41 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "AIPtAlt_S_Oo"
+      },
+      "source": [
+        "\r\n",
+        "\r\n",
+        "---\r\n",
+        "\r\n",
+        "---\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sxjdiLNhTGNt"
+      },
+      "source": [
+        "## **2일차. 훈련 세트와 테스트 세트**\r\n",
+        "- 모델의 공정하고 정확한 평가를 위해서는 학습에 사용되지 않은 데이터를 이용하여 평가해야 한다\r\n",
+        "- 훈련 데이터 => 훈련 세트 + 테스트 세트\r\n",
+        "- 훈련 세트와 테스트 세트를 올바르게 나누기 위해 파이썬의 다차원 배열 라이브러리인 넘파이를 사용해보았다\r\n",
+        "- 넘파이는 파이썬의 리스트와 비슷하지만 고차원의 큰 배열을 효과적으로 다룰 수 있는 다양한 도구를 제공한다"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Nh2qqGkwQJlN"
       },
       "source": [
-        "## 전체 소스코드"
+        "## **<전체 소스코드>**"
       ]
     },
     {
