fix: import packages

--- a/HonGong_ML_DL/08_Stochastic_Gradient_Descent.ipynb
+++ b/HonGong_ML_DL/08_Stochastic_Gradient_Descent.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "t49HMuRj3iDb"
       ],
-      "authorship_tag": "ABX9TyPxQsdgdmFbU3u/vmWd05kw",
+      "authorship_tag": "ABX9TyO47r+KSJyU9QTwI265mP/Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,12 +57,9 @@
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.linear_model import SGDClassifier\n",
         "\n",
-        "from scipy.special import expit\n",
-        "from scipy.special import softmax\n",
-        "\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -193,13 +190,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "abae5312-3a34-415f-a70b-ee19c8702cef"
+        "outputId": "d22c6d28-3c01-4413-9c1b-3f5fe80eeaa7"
       },
       "source": [
         "fish = pd.read_csv('https://bit.ly/fish_csv')\n",
         "fish.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -291,7 +288,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -304,7 +301,7 @@
       "metadata": {
         "id": "oDSEWwX0eZsf"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -315,7 +312,7 @@
       "metadata": {
         "id": "HDj4kpkueo9R"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -329,7 +326,7 @@
       "metadata": {
         "id": "jXw81lsMe6XS"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -344,7 +341,7 @@
     {
       "cell_type": "code",
       "source": [
-        "sc = SGDClassifier(loss='log', max_iter=40, random_state=42) # 로시스틱 손실 함수 / 에포크 10회 수행\n",
+        "sc = SGDClassifier(loss='log', max_iter=40, random_state=42) # 로지스틱 손실 함수 / 에포크 10회 수행\n",
         "sc.fit(train_scaled, y_train)\n",
         "print(sc.score(train_scaled, y_train))\n",
         "print(sc.score(test_scaled, y_test))"
@@ -354,9 +351,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gArHGf5ufLrI",
-        "outputId": "43453e51-f932-4a78-b0be-37b821477c07"
+        "outputId": "95ba579b-b8ac-40c5-93f3-91c568f90fa4"
       },
-      "execution_count": 16,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,9 +387,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TOtSYqqIfotN",
-        "outputId": "71249d1f-f77c-4ea0-ccef-b67b8d96fbb9"
+        "outputId": "ce8525ea-4926-4a28-88ba-eb964654c0e6"
       },
-      "execution_count": 17,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,7 +443,7 @@
       "metadata": {
         "id": "wm6uNAMRgWn_"
       },
-      "execution_count": 19,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -469,7 +466,7 @@
       "metadata": {
         "id": "DLYzAOt4i6CY"
       },
-      "execution_count": 21,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -485,9 +482,9 @@
           "height": 265
         },
         "id": "U24fBTiXj3vL",
-        "outputId": "4efd61f1-ec63-400c-e39b-794343d4b802"
+        "outputId": "5eb47c46-02c3-4640-df5d-818c2407d516"
       },
-      "execution_count": 22,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -525,9 +522,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7JXmCdkdkUPM",
-        "outputId": "5896afa9-5de6-4258-c3a1-4e62027a7a43"
+        "outputId": "0ea1c2e5-924a-4f13-f331-3fd26760872c"
       },
-      "execution_count": 25,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -556,7 +553,7 @@
       "metadata": {
         "id": "qbglDPhUkuMp"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     }
   ]
