feat: Sequential Model with ReLU function & Flatten layer

--- a/HonGong_ML_DL/16_DNN.ipynb
+++ b/HonGong_ML_DL/16_DNN.ipynb
@@ -6,7 +6,7 @@
       "name": "16_DNN.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNA0u+k9MPtFDLz3fSddZC0",
+      "authorship_tag": "ABX9TyNWg9hZliciIeV0vAZ/sc3e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,32 +75,10 @@
         "train_scaled, val_scaled, y_train, y_val = train_test_split(train_scaled, y_train, test_size=0.2, random_state=42)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "28QWmYDoefKW",
-        "outputId": "9ea7e5ac-77b8-4e2d-c38d-3c60c0b4a649"
+        "id": "28QWmYDoefKW"
       },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
-            "32768/29515 [=================================] - 0s 0us/step\n",
-            "40960/29515 [=========================================] - 0s 0us/step\n",
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
-            "26427392/26421880 [==============================] - 0s 0us/step\n",
-            "26435584/26421880 [==============================] - 0s 0us/step\n",
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
-            "16384/5148 [===============================================================================================] - 0s 0us/step\n",
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
-            "4423680/4422102 [==============================] - 0s 0us/step\n",
-            "4431872/4422102 [==============================] - 0s 0us/step\n"
-          ]
-        }
-      ]
+      "execution_count": 23,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -427,12 +405,177 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 렐루 함수"
+      ],
+      "metadata": {
+        "id": "w0EPsujIsHpJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "초창기 인공 신경망 은닉층에는 시그모이드 함수가 활성화 함수로써 많이 사용되었다. 하지만 시그모이드는 양극단으로 갈수록 그래프의 기울기가 줄어들기 때문에 올바른 출력을 만드는데 신속하게 대응하지 못한다는 단점을 가진다. \n",
+        "\n",
+        "$\\phi = {1\\over {1+e^{-z}}}$\n",
+        "\n",
+        "이러한 문제는 층이 많은 심층 신경망이 등장하면서 더더욱 대두되었고 이에 따라 ReLU 활성화 함수가 대체재로서 제안되었다.\n",
+        "\n",
+        "렐루 함수는 입력이 양수일 경우 그냥 입력을 통과시키고 음수일 경우 0으로 만든다.\n",
+        "\n",
+        "렐루 함수는 `max(0, z)`로도 나타낼 수 있다."
+      ],
+      "metadata": {
+        "id": "rHGN2p91sJKB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "렐루 함수는 특히 이미지 처리에서 좋은 성능을 내는 것으로 알려져 있다."
+      ],
+      "metadata": {
+        "id": "G8Qygmuls2Nz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "패션 MNIST 데이터는 28 * 28 크기이기 때문에 인공 신경망에 주입하기 위해서 `reshape()` 메서드를 사용해 1차원 배열로 바꿔주었다. 하지만 케라스에서는 이를 위한 Flatten 레이어를 제공한다.\n",
+        "\n",
+        "사실상 Flatten 층은 입력에 곱해지는 가중치나 절편이 없어 별도의 처리를 하진 않고 신경망 성능에 기여하는 바가 없지만, Flatten 클래스가 입력층과 은닉층 사이에 추가된다는 점 때문에 층이라고 취금한다."
+      ],
+      "metadata": {
+        "id": "kyPS5nQItydM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = keras.Sequential(name='FMNIST_relu')\n",
+        "model.add(keras.layers.Flatten(input_shape=(28,28)))\n",
+        "model.add(keras.layers.Dense(100, activation='relu', name='hidden'))\n",
+        "model.add(keras.layers.Dense(10, activation='softmax', name='output'))"
+      ],
+      "metadata": {
+        "id": "vLEruYTjernT"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q-xI4HADuxP3",
+        "outputId": "36199786-7123-436d-bb94-3b15cd8b0541"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"FMNIST_relu\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " flatten (Flatten)           (None, 784)               0         \n",
+            "                                                                 \n",
+            " hidden (Dense)              (None, 100)               78500     \n",
+            "                                                                 \n",
+            " output (Dense)              (None, 10)                1010      \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 79,510\n",
+            "Trainable params: 79,510\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`summary()`에서는 층이 3개처럼 출력되지만 Flatten 클래스는 학습을 수행하는 층이 아니기 때문에 깊이가 3이 아니라 2이다. 위 flatten 층에 파라미터 개수가 0인 것을 통해 더욱 확실히 알 수 있다."
+      ],
+      "metadata": {
+        "id": "7knttcbCu0ZJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(X_train, y_train), (X_test, y_test) = keras.datasets.fashion_mnist.load_data()\n",
+        "\n",
+        "train_scaled = X_train / 255.0\n",
+        "# train_scaled = train_scaled.reshape(-1, 28*28)\n",
+        "\n",
+        "train_scaled, val_scaled, y_train, y_val = train_test_split(train_scaled, y_train, test_size=0.2, random_state=42)"
+      ],
+      "metadata": {
+        "id": "W70nvZMMvjvA"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(loss='sparse_categorical_crossentropy', metrics='accuracy')\n",
+        "model.fit(train_scaled, y_train, epochs=5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nV4Wgd01uyPJ",
+        "outputId": "05d50bc6-5bf9-4a1f-9b1d-a8437b618ecd"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5\n",
+            "1500/1500 [==============================] - 5s 3ms/step - loss: 0.5343 - accuracy: 0.8126\n",
+            "Epoch 2/5\n",
+            "1500/1500 [==============================] - 4s 3ms/step - loss: 0.3953 - accuracy: 0.8585\n",
+            "Epoch 3/5\n",
+            "1500/1500 [==============================] - 4s 3ms/step - loss: 0.3567 - accuracy: 0.8706\n",
+            "Epoch 4/5\n",
+            "1500/1500 [==============================] - 5s 3ms/step - loss: 0.3359 - accuracy: 0.8797\n",
+            "Epoch 5/5\n",
+            "1500/1500 [==============================] - 4s 3ms/step - loss: 0.3225 - accuracy: 0.8846\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f694c6ca7d0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "vLEruYTjernT"
+        "id": "PReY054VvRxV"
       },
       "execution_count": null,
       "outputs": []
