--- a/HonGong_ML_DL/18_RNN.ipynb
+++ b/HonGong_ML_DL/18_RNN.ipynb
@@ -6,7 +6,7 @@
       "name": "18_RNN.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMeCNcvcOZKSQgmtTZ9y7zk",
+      "authorship_tag": "ABX9TyNBve5xZBDEs9Vp0Bet+g9R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -611,10 +611,162 @@
     {
       "cell_type": "code",
       "source": [
+        "rmsprop = keras.optimizers.RMSprop(learning_rate=1e-4)\n",
+        "model.compile(optimizer=rmsprop, loss='binary_crossentropy', metrics=['accuracy'])\n",
+        "\n",
+        "checkpoint_cb = keras.callbacks.ModelCheckpoint('best-simplernn-model.h5')\n",
+        "early_stopping_cb = keras.callbacks.EarlyStopping(patience=3, restore_best_weights=True)\n",
+        "\n",
+        "history = model.fit(train_oh, y_train, epochs=100, batch_size=64,\n",
+        "                    validation_data=(val_oh, y_val),\n",
+        "                    callbacks=[checkpoint_cb, early_stopping_cb])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zXeUSNZiJacR",
+        "outputId": "40065db3-bb64-4a98-e41a-b9d2db14f47e"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/100\n",
+            "313/313 [==============================] - 16s 47ms/step - loss: 0.6990 - accuracy: 0.5051 - val_loss: 0.6943 - val_accuracy: 0.5140\n",
+            "Epoch 2/100\n",
+            "313/313 [==============================] - 13s 40ms/step - loss: 0.6937 - accuracy: 0.5095 - val_loss: 0.6925 - val_accuracy: 0.5182\n",
+            "Epoch 3/100\n",
+            "313/313 [==============================] - 14s 44ms/step - loss: 0.6916 - accuracy: 0.5224 - val_loss: 0.6912 - val_accuracy: 0.5244\n",
+            "Epoch 4/100\n",
+            "313/313 [==============================] - 13s 43ms/step - loss: 0.6899 - accuracy: 0.5314 - val_loss: 0.6902 - val_accuracy: 0.5338\n",
+            "Epoch 5/100\n",
+            "313/313 [==============================] - 14s 45ms/step - loss: 0.6884 - accuracy: 0.5414 - val_loss: 0.6892 - val_accuracy: 0.5408\n",
+            "Epoch 6/100\n",
+            "313/313 [==============================] - 14s 45ms/step - loss: 0.6869 - accuracy: 0.5497 - val_loss: 0.6883 - val_accuracy: 0.5450\n",
+            "Epoch 7/100\n",
+            "313/313 [==============================] - 14s 45ms/step - loss: 0.6854 - accuracy: 0.5542 - val_loss: 0.6872 - val_accuracy: 0.5450\n",
+            "Epoch 8/100\n",
+            "313/313 [==============================] - 13s 43ms/step - loss: 0.6839 - accuracy: 0.5600 - val_loss: 0.6862 - val_accuracy: 0.5466\n",
+            "Epoch 9/100\n",
+            "313/313 [==============================] - 14s 45ms/step - loss: 0.6825 - accuracy: 0.5652 - val_loss: 0.6854 - val_accuracy: 0.5484\n",
+            "Epoch 10/100\n",
+            "313/313 [==============================] - 14s 44ms/step - loss: 0.6811 - accuracy: 0.5691 - val_loss: 0.6849 - val_accuracy: 0.5504\n",
+            "Epoch 11/100\n",
+            "313/313 [==============================] - 13s 42ms/step - loss: 0.6796 - accuracy: 0.5706 - val_loss: 0.6842 - val_accuracy: 0.5504\n",
+            "Epoch 12/100\n",
+            "313/313 [==============================] - 13s 41ms/step - loss: 0.6782 - accuracy: 0.5748 - val_loss: 0.6836 - val_accuracy: 0.5554\n",
+            "Epoch 13/100\n",
+            "313/313 [==============================] - 14s 46ms/step - loss: 0.6768 - accuracy: 0.5778 - val_loss: 0.6830 - val_accuracy: 0.5550\n",
+            "Epoch 14/100\n",
+            "313/313 [==============================] - 13s 41ms/step - loss: 0.6753 - accuracy: 0.5788 - val_loss: 0.6822 - val_accuracy: 0.5560\n",
+            "Epoch 15/100\n",
+            "313/313 [==============================] - 13s 43ms/step - loss: 0.6739 - accuracy: 0.5824 - val_loss: 0.6815 - val_accuracy: 0.5562\n",
+            "Epoch 16/100\n",
+            "313/313 [==============================] - 13s 42ms/step - loss: 0.6725 - accuracy: 0.5845 - val_loss: 0.6812 - val_accuracy: 0.5538\n",
+            "Epoch 17/100\n",
+            "313/313 [==============================] - 13s 42ms/step - loss: 0.6711 - accuracy: 0.5865 - val_loss: 0.6808 - val_accuracy: 0.5562\n",
+            "Epoch 18/100\n",
+            "313/313 [==============================] - 12s 40ms/step - loss: 0.6697 - accuracy: 0.5892 - val_loss: 0.6803 - val_accuracy: 0.5580\n",
+            "Epoch 19/100\n",
+            "313/313 [==============================] - 13s 41ms/step - loss: 0.6682 - accuracy: 0.5912 - val_loss: 0.6797 - val_accuracy: 0.5552\n",
+            "Epoch 20/100\n",
+            "313/313 [==============================] - 13s 43ms/step - loss: 0.6668 - accuracy: 0.5925 - val_loss: 0.6794 - val_accuracy: 0.5554\n",
+            "Epoch 21/100\n",
+            "313/313 [==============================] - 13s 41ms/step - loss: 0.6654 - accuracy: 0.5950 - val_loss: 0.6787 - val_accuracy: 0.5580\n",
+            "Epoch 22/100\n",
+            "313/313 [==============================] - 13s 42ms/step - loss: 0.6640 - accuracy: 0.5987 - val_loss: 0.6785 - val_accuracy: 0.5566\n",
+            "Epoch 23/100\n",
+            "313/313 [==============================] - 13s 40ms/step - loss: 0.6626 - accuracy: 0.5983 - val_loss: 0.6780 - val_accuracy: 0.5576\n",
+            "Epoch 24/100\n",
+            "313/313 [==============================] - 14s 45ms/step - loss: 0.6611 - accuracy: 0.6018 - val_loss: 0.6777 - val_accuracy: 0.5608\n",
+            "Epoch 25/100\n",
+            "313/313 [==============================] - 14s 44ms/step - loss: 0.6596 - accuracy: 0.6028 - val_loss: 0.6770 - val_accuracy: 0.5612\n",
+            "Epoch 26/100\n",
+            "313/313 [==============================] - 15s 48ms/step - loss: 0.6581 - accuracy: 0.6079 - val_loss: 0.6773 - val_accuracy: 0.5610\n",
+            "Epoch 27/100\n",
+            "313/313 [==============================] - 14s 44ms/step - loss: 0.6567 - accuracy: 0.6074 - val_loss: 0.6762 - val_accuracy: 0.5596\n",
+            "Epoch 28/100\n",
+            "313/313 [==============================] - 13s 43ms/step - loss: 0.6552 - accuracy: 0.6102 - val_loss: 0.6755 - val_accuracy: 0.5610\n",
+            "Epoch 29/100\n",
+            "313/313 [==============================] - 14s 43ms/step - loss: 0.6537 - accuracy: 0.6118 - val_loss: 0.6755 - val_accuracy: 0.5616\n",
+            "Epoch 30/100\n",
+            "313/313 [==============================] - 14s 44ms/step - loss: 0.6521 - accuracy: 0.6140 - val_loss: 0.6756 - val_accuracy: 0.5618\n",
+            "Epoch 31/100\n",
+            "313/313 [==============================] - 14s 45ms/step - loss: 0.6505 - accuracy: 0.6178 - val_loss: 0.6744 - val_accuracy: 0.5662\n",
+            "Epoch 32/100\n",
+            "313/313 [==============================] - 13s 41ms/step - loss: 0.6489 - accuracy: 0.6197 - val_loss: 0.6746 - val_accuracy: 0.5666\n",
+            "Epoch 33/100\n",
+            "313/313 [==============================] - 13s 43ms/step - loss: 0.6471 - accuracy: 0.6220 - val_loss: 0.6740 - val_accuracy: 0.5658\n",
+            "Epoch 34/100\n",
+            "313/313 [==============================] - 14s 46ms/step - loss: 0.6449 - accuracy: 0.6262 - val_loss: 0.6721 - val_accuracy: 0.5676\n",
+            "Epoch 35/100\n",
+            "313/313 [==============================] - 13s 43ms/step - loss: 0.6399 - accuracy: 0.6332 - val_loss: 0.6629 - val_accuracy: 0.5954\n",
+            "Epoch 36/100\n",
+            "313/313 [==============================] - 13s 43ms/step - loss: 0.6272 - accuracy: 0.6537 - val_loss: 0.6482 - val_accuracy: 0.6198\n",
+            "Epoch 37/100\n",
+            "313/313 [==============================] - 14s 43ms/step - loss: 0.6115 - accuracy: 0.6761 - val_loss: 0.6314 - val_accuracy: 0.6508\n",
+            "Epoch 38/100\n",
+            "313/313 [==============================] - 13s 41ms/step - loss: 0.5909 - accuracy: 0.6960 - val_loss: 0.6124 - val_accuracy: 0.6720\n",
+            "Epoch 39/100\n",
+            "313/313 [==============================] - 13s 43ms/step - loss: 0.5673 - accuracy: 0.7182 - val_loss: 0.5901 - val_accuracy: 0.6950\n",
+            "Epoch 40/100\n",
+            "313/313 [==============================] - 14s 44ms/step - loss: 0.5418 - accuracy: 0.7400 - val_loss: 0.5668 - val_accuracy: 0.7178\n",
+            "Epoch 41/100\n",
+            "313/313 [==============================] - 15s 46ms/step - loss: 0.5185 - accuracy: 0.7546 - val_loss: 0.5456 - val_accuracy: 0.7268\n",
+            "Epoch 42/100\n",
+            "313/313 [==============================] - 14s 44ms/step - loss: 0.4979 - accuracy: 0.7667 - val_loss: 0.5293 - val_accuracy: 0.7426\n",
+            "Epoch 43/100\n",
+            "313/313 [==============================] - 13s 42ms/step - loss: 0.4814 - accuracy: 0.7773 - val_loss: 0.5140 - val_accuracy: 0.7528\n",
+            "Epoch 44/100\n",
+            "313/313 [==============================] - 13s 42ms/step - loss: 0.4663 - accuracy: 0.7881 - val_loss: 0.5035 - val_accuracy: 0.7570\n",
+            "Epoch 45/100\n",
+            "313/313 [==============================] - 13s 42ms/step - loss: 0.4551 - accuracy: 0.7944 - val_loss: 0.4893 - val_accuracy: 0.7684\n",
+            "Epoch 46/100\n",
+            "313/313 [==============================] - 14s 45ms/step - loss: 0.4454 - accuracy: 0.7993 - val_loss: 0.4820 - val_accuracy: 0.7738\n",
+            "Epoch 47/100\n",
+            "313/313 [==============================] - 13s 42ms/step - loss: 0.4376 - accuracy: 0.8038 - val_loss: 0.4760 - val_accuracy: 0.7808\n",
+            "Epoch 48/100\n",
+            "313/313 [==============================] - 14s 45ms/step - loss: 0.4306 - accuracy: 0.8069 - val_loss: 0.4711 - val_accuracy: 0.7828\n",
+            "Epoch 49/100\n",
+            "313/313 [==============================] - 13s 42ms/step - loss: 0.4241 - accuracy: 0.8109 - val_loss: 0.4675 - val_accuracy: 0.7858\n",
+            "Epoch 50/100\n",
+            "313/313 [==============================] - 13s 41ms/step - loss: 0.4198 - accuracy: 0.8120 - val_loss: 0.4653 - val_accuracy: 0.7812\n",
+            "Epoch 51/100\n",
+            "313/313 [==============================] - 13s 42ms/step - loss: 0.4158 - accuracy: 0.8153 - val_loss: 0.4670 - val_accuracy: 0.7792\n",
+            "Epoch 52/100\n",
+            "313/313 [==============================] - 13s 42ms/step - loss: 0.4123 - accuracy: 0.8165 - val_loss: 0.4611 - val_accuracy: 0.7876\n",
+            "Epoch 53/100\n",
+            "313/313 [==============================] - 13s 42ms/step - loss: 0.4089 - accuracy: 0.8184 - val_loss: 0.4576 - val_accuracy: 0.7914\n",
+            "Epoch 54/100\n",
+            "313/313 [==============================] - 13s 42ms/step - loss: 0.4061 - accuracy: 0.8204 - val_loss: 0.4573 - val_accuracy: 0.7888\n",
+            "Epoch 55/100\n",
+            "313/313 [==============================] - 13s 42ms/step - loss: 0.4037 - accuracy: 0.8213 - val_loss: 0.4550 - val_accuracy: 0.7910\n",
+            "Epoch 56/100\n",
+            "313/313 [==============================] - 13s 42ms/step - loss: 0.4011 - accuracy: 0.8232 - val_loss: 0.4545 - val_accuracy: 0.7920\n",
+            "Epoch 57/100\n",
+            "313/313 [==============================] - 13s 43ms/step - loss: 0.3992 - accuracy: 0.8249 - val_loss: 0.4545 - val_accuracy: 0.7914\n",
+            "Epoch 58/100\n",
+            "313/313 [==============================] - 13s 42ms/step - loss: 0.3970 - accuracy: 0.8249 - val_loss: 0.4545 - val_accuracy: 0.7924\n",
+            "Epoch 59/100\n",
+            "313/313 [==============================] - 14s 43ms/step - loss: 0.3956 - accuracy: 0.8270 - val_loss: 0.4570 - val_accuracy: 0.7868\n",
+            "Epoch 60/100\n",
+            "313/313 [==============================] - 14s 43ms/step - loss: 0.3938 - accuracy: 0.8274 - val_loss: 0.4548 - val_accuracy: 0.7902\n",
+            "Epoch 61/100\n",
+            "313/313 [==============================] - 13s 43ms/step - loss: 0.3929 - accuracy: 0.8279 - val_loss: 0.4578 - val_accuracy: 0.7878\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "zXeUSNZiJacR"
+        "id": "51vbZbDBKnmz"
       },
       "execution_count": null,
       "outputs": []
