feat: padding & strides

--- a/HonGong_ML_DL/20_CNN.ipynb
+++ b/HonGong_ML_DL/20_CNN.ipynb
@@ -6,7 +6,7 @@
       "name": "20_CNN.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMGmR9ore8YbRO5MJEty6+A",
+      "authorship_tag": "ABX9TyNJ5bYHEq+QeoW2aHhz7nMX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -146,7 +146,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 패딩 & 스트라이드"
+        "### 패딩"
       ],
       "metadata": {
         "id": "getPpSnYxZHv"
@@ -155,10 +155,102 @@
     {
       "cell_type": "markdown",
       "source": [
-        "합성곱 계산을 통해 특성 맵이 만들어지면 입력보다 작은 크기를 가지게 된다. 만약 커널 크기는 그대로 두고 출력의 크기(특성 맵의 크기)를 입력과 동일하게 만들고자 할 경우 입력에 여분 크기를 부여해야 한다. 이러한 여분을 패딩이라고 하며 이는 출력값에는 영향을 미치지 않는 비어있는 값(0)이다."
+        "합성곱 계산을 통해 특성 맵이 만들어지면 입력보다 작은 크기를 가지게 된다. 만약 커널 크기는 그대로 두고 출력의 크기(특성 맵의 크기)를 입력과 동일하게 만들고자 할 경우 입력에 여분 크기를 부여해야 한다. 이러한 여분을 패딩이라고 하며 이는 출력값에는 영향을 미치지 않는 비어있는 값(0)이다.\n",
+        "\n",
+        "이렇게 입력과 특성 맵의 크기를 동일하게 만들기 위해 입력 주변을 0으로 패딩하는 것을 세임 패딩(same padding)이라고 하고, 패딩 없이 순수하게 합성곱을 하여 특성 맵을 만드느 것을 밸리드 패딩(valid padding)이라고 한다. 합성곱에서는 세임 패딩 방식을 주로 사용하는데, 그 이유는 입력의 가장자리 정보가 가운데 정보에 비해 비중이 작아지는 것을 방지하기 위해서이다."
       ],
       "metadata": {
         "id": "ZjNkF0KjxbkR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "패딩 방식은 Conv2D 클래스에서 지정할 수 있으며, 이는 padding 매개변수에 의해 이뤄진다.\n",
+        "\n",
+        "(세임 패딩: same / 밸리드 패딩(default): valid)"
+      ],
+      "metadata": {
+        "id": "kB-MMjCNP-ds"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "keras.layers.Conv2D(10, kernel_size=(3,3), activation='relu', padding='same')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b-wzO3chxFrR",
+        "outputId": "60305993-4109-4b94-cf6e-d4299df7fb01"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.layers.convolutional.Conv2D at 0x7f97d851be10>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 스트라이드"
+      ],
+      "metadata": {
+        "id": "YLjF_R8_QWdH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "필터는 기본적으로 한 칸씩 이동하는데, 이때 이동의 크기를 지정할 수 있다. 이러한 크기를 스트라이드(stride)라고 하며, Conv2D 클래스의 strides 매개변수로 조절할 수 있다."
+      ],
+      "metadata": {
+        "id": "gXq5ybeEQYDr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "keras.layers.Conv2D(10, kernel_size=(3,3), activation='relu', padding='same', strides=1) # default: 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uVepXn5SQS3n",
+        "outputId": "b1068b01-c53f-4219-b6ec-107ca72ac01a"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.layers.convolutional.Conv2D at 0x7f97d7b604d0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "보통 1보다 큰 스트라이드를 사용하는 경우는 드물다."
+      ],
+      "metadata": {
+        "id": "GYVdw6AxQwXb"
       }
     },
     {
@@ -167,7 +259,7 @@
         ""
       ],
       "metadata": {
-        "id": "b-wzO3chxFrR"
+        "id": "DysCf26QQt6z"
       },
       "execution_count": null,
       "outputs": []
