--- a/HonGong_ML_DL/20_CNN.ipynb
+++ b/HonGong_ML_DL/20_CNN.ipynb
@@ -6,7 +6,7 @@
       "name": "20_CNN.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNJ5bYHEq+QeoW2aHhz7nMX",
+      "authorship_tag": "ABX9TyMXBjswDLPh3B6D7j5gVEQY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "metadata": {
         "id": "NoJjRZ4WeCYd"
       },
@@ -127,19 +127,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "INrDF5kyrD-i",
-        "outputId": "aaade096-b5c8-4eee-a07b-e5e00de0a104"
+        "outputId": "de078b38-b17f-45e9-cd03-3462038cb053"
       },
-      "execution_count": 2,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.layers.convolutional.Conv2D at 0x7f97d8533490>"
+              "<keras.layers.convolutional.Conv2D at 0x7f97d7af0a90>"
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 7
         }
       ]
     },
@@ -184,19 +184,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b-wzO3chxFrR",
-        "outputId": "60305993-4109-4b94-cf6e-d4299df7fb01"
+        "outputId": "61e02e8c-63ab-46dd-9a50-993ba8d34235"
       },
-      "execution_count": 3,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.layers.convolutional.Conv2D at 0x7f97d851be10>"
+              "<keras.layers.convolutional.Conv2D at 0x7f9851e46610>"
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 8
         }
       ]
     },
@@ -228,19 +228,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uVepXn5SQS3n",
-        "outputId": "b1068b01-c53f-4219-b6ec-107ca72ac01a"
+        "outputId": "d3ef30ec-9b1f-48ac-fb85-bee89b47fc42"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.layers.convolutional.Conv2D at 0x7f97d7b604d0>"
+              "<keras.layers.convolutional.Conv2D at 0x7f97d7ae8c90>"
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 9
         }
       ]
     },
@@ -254,12 +254,157 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 풀링"
+      ],
+      "metadata": {
+        "id": "dmr9AoLxXfy-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "풀링(pooling)은 합성곱 층에서 만든 특성 맵의 가로세로 크기를 줄이는 역할을 수행한다. 이는 특성 맵의 개수는 유지하되 너비와 높이만 줄이는 방법이다.\n",
+        "\n",
+        "풀링에는 가중치가 없어 풀링이 적용되는 영역에서 가장 큰 값을 선택하거나 평균값을 계산하는 방식으로 진행된다. 최대 값을 고르는 방식을 최대 풀링(max pooling), 평균값을 계산하여 고르는 방법을 평균 풀링(average pooling)이라고 한다. 평균 풀링은 특성 맵에 있는 중요 정보를 희석시킬 수 있기 때문에 최대 풀링을 주로 사용한다.\n",
+        "\n",
+        "이렇게 출력되는 값도 특성 맵이라고 부른다."
+      ],
+      "metadata": {
+        "id": "ClRKAAOTXhkA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "합성곱과 달리 풀링은 겹치지 않고 이동한다. 스트라이드 개념을 빌려 이야기하자면, 풀링 크기의 스트라이드를 가진다고도 할 수 있다."
+      ],
+      "metadata": {
+        "id": "SBbhTm7sZAG2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "케라스에서는 MaxPooling2D 클래스로 풀링을 수행할 수 있다."
+      ],
+      "metadata": {
+        "id": "EAAzX1BrZOk6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "keras.layers.MaxPooling2D(2) # 풀링의 크기 - 대부분 2를 사용"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DysCf26QQt6z",
+        "outputId": "89256114-093f-4c68-c21d-1ffeb3b6236f"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.layers.pooling.MaxPooling2D at 0x7f97d7ae8390>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "풀링의 가로세로 길이를 다르게 하려면 튜플 형식으로도 지정할 수 있으나 일반적이지는 않다."
+      ],
+      "metadata": {
+        "id": "4yFVibcFZkZA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "풀링에도 strides와 padding 매개변수가 있지만, 기본값에서 잘 바꾸지 않는다."
+      ],
+      "metadata": {
+        "id": "p242FH7aZuEA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "keras.layers.MaxPooling2D(2, strides=2, padding='valid')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W1S68XwFZc4S",
+        "outputId": "a7ff679d-5e35-4c1f-de44-a73bbfce47ad"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.layers.pooling.MaxPooling2D at 0x7f97d8615bd0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "평균 풀링은 AveragePooling2D로 수행할 수 있다. 기본 사용법은 MaxPooling2D와 같다."
+      ],
+      "metadata": {
+        "id": "ykWnXyp2aOxy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "keras.layers.AveragePooling2D(2, strides=2, padding='valid')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qr2OhvxAZ4sK",
+        "outputId": "0dbb0acf-a918-4155-d4b7-c769d8fbcf28"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.layers.pooling.AveragePooling2D at 0x7f97d7b86410>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "DysCf26QQt6z"
+        "id": "8pHQbEjsadqD"
       },
       "execution_count": null,
       "outputs": []
