--- a/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb
+++ b/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb
@@ -10,12 +10,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.4.2'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "import cv2 as cv"
+    "import cv2 as cv\n",
+    "cv.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img = cv.imread('./SfM/Data/sfm03.jpg')\n",
+    "gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
+    "\n",
+    "sift = cv.xfeatures2d.SIFT_create()\n",
+    "kp = sift.detect(gray, None)\n",
+    "\n",
+    "img = cv.drawKeypoints(gray,kp,img)\n",
+    "\n",
+    "cv.imwrite('SIFT_kps.jpg', img)"
    ]
   },
   {
@@ -47,7 +87,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e179f8a4a8b01c6d8ca8e32ceead8b103eff6dd0e4d0ca5963a7b698a7e956b3"
+    "hash": "31cc2db862ff520a3b0583ac78d1cc357f4df59f1b7139ece1fe610880394de0"
    }
   }
  },
