feat(pa2): step 1 code done

--- a/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb
+++ b/ComputerVision/PA2_Structure_from_Motion/PA2_Structure_from_Motion.ipynb
@@ -12,27 +12,15 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'3.4.2'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import cv2 as cv\n",
-    "cv.__version__"
+    "import cv2 as cv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -41,21 +29,60 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "img = cv.imread('./SfM/Data/sfm03.jpg')\n",
-    "gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
+    "img1 = cv.imread('./SfM/Data/sfm03.jpg')\n",
+    "img2 = cv.imread('./SfM/Data/sfm04.jpg')\n",
     "\n",
+    "# create SIFT instance\n",
     "sift = cv.xfeatures2d.SIFT_create()\n",
-    "kp = sift.detect(gray, None)\n",
     "\n",
-    "img = cv.drawKeypoints(gray,kp,img)\n",
+    "# detect keypoints\n",
+    "img1_kp, img1_des = sift.detectAndCompute(img1, None)\n",
+    "img2_kp, img2_des = sift.detectAndCompute(img2, None)\n",
     "\n",
-    "cv.imwrite('SIFT_kps.jpg', img)"
+    "img1_draw = cv.drawKeypoints(img1, img1_kp, None)\n",
+    "img2_draw = cv.drawKeypoints(img2, img2_kp, None)\n",
+    "# img1_draw = cv.drawKeypoints(img1, img1_kp, None, flags=cv.DRAW_MATCHES_FLAGS_DRAW_RICH_KEYPOINTS)\n",
+    "# img2_draw = cv.drawKeypoints(img2, img2_kp, None, flags=cv.DRAW_MATCHES_FLAGS_DRAW_RICH_KEYPOINTS)\n",
+    "\n",
+    "# save result\n",
+    "cv.imwrite('sift_keypoints.jpg',img1_draw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2592\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Brute force matching with k=2\n",
+    "bf = cv.BFMatcher()\n",
+    "matches = bf.knnMatch(img1_des, img2_des, k=2)\n",
+    "# bf = cv2.BFMatcher(cv2.NORM_L2, crossCheck=True)\n",
+    "# matches = bf.match(img1_des, img2_des)\n",
+    "\n",
+    "\n",
+    "# Ratio test and retrieval of indices\n",
+    "matches_good = [m1 for m1, m2 in matches if m1.distance < 0.80*m2.distance]\n",
+    "\n",
+    "sorted_matches = sorted(matches_good, key=lambda x: x.distance)\n",
+    "res = cv.drawMatches(img1, img1_kp, img2, img2_kp, sorted_matches, img2, flags=2) \n",
+    "\n",
+    "cv.imwrite('sift_bfMatcher.jpg',res)\n",
+    "print(len(sorted_matches))"
    ]
   },
   {
@@ -87,7 +114,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31cc2db862ff520a3b0583ac78d1cc357f4df59f1b7139ece1fe610880394de0"
+    "hash": "e179f8a4a8b01c6d8ca8e32ceead8b103eff6dd0e4d0ca5963a7b698a7e956b3"
    }
   }
  },
